--- a/src/styleSheets/SectorInfo.css
+++ b/src/styleSheets/SectorInfo.css
@@ -50,3 +50,6 @@
   -o-animation-play-state: paused;
   animation-play-state: paused;
 }
+
+@media screen and (min-width: 305px) and (max-width: 405px) {
+}
